Revision history for SQL::Abstract

    - New exportable functions: is_literal_value($) and is_plain_value($)
    - New attribute 'escape_char' allowing for proper escape of quote_chars
      present in an identifier
    - Treat { -value => undef } as plain undef in all cases

revision 1.78  2014-05-28
----------------------------
    - Fix parsing of binary ops to correctly take up only a single LHS
      element, instead of gobbling up the entire parse-to-date
    - Explicitly handle ROW_NUMBER() OVER as the snowflake-operator it is
    - Improve signatures/documentation of is_same_sql_bind / eq_sql_bind
    - Retire script/format-sql - the utility needs more work to be truly
      end-user convenient

revision 1.77  2014-01-17
----------------------------
    - Reintroduce { -not => undef } column operator (regression from 1.75)

revision 1.75  2013-12-27
----------------------------
    - *UPCOMING INCOMPATIBLE BUGFIX*: SQLA used to generate incorrect SQL
      on undef-containing lists fed to -in and -not_in. An exception will
      be raised for a while before properly fixing this, to avoid quiet
      but subtle changes to query results in production
    - Deprecate and warn when supplying an empty arrayref to like/not_like
      operators (likely to be removed before 2.0)

    - Warn when using an inequality operator with a multi-value array to
      arrive at what amounts to a 1=1 condition (no pre-2.0 plans to fix
      this behavior due to backwards comp concerns)
    - Fix false negative comparison of ORDER BY <function> ASC
    - More improvements of incorrect parsing (placeholder at end of list
      element)
    - Fix typos in POD and comments (RT#87776)
    - Augment -not_bool example with nesting (RT#89601)

revision 1.74  2013-06-04
----------------------------
    - Fix insufficient parenthesis unroll during operator comparison
    - 'ORDER BY foo' and 'ORDER BY foo ASC' are now considered equal